--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "httpd-2.2.x"]
 	path = httpd-2.2.x
-	url = http://yasmin.technion.ac.il/ohad/git/httpd-2.2.x
+	url = http://yasmin.technion.ac.il/ohad/git/httpd-2.2.x.git
