--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "httpd-2.2.x"]
 	path = httpd-2.2.x
 	url = http://git.haggai.is-a-geek.org/git/httpd-2.2.x.git
+[submodule "tanger"]
+	path = tanger
+	url = http://git.haggai.is-a-geek.org/git/tanger.git
