make example compiles on linux

--- a/intel-examples/Makefile
+++ b/intel-examples/Makefile
@@ -1,9 +1,13 @@
-virtual: intel_stmtest_virtual.cpp
-	icc –Qtm_enabled –openmp intel_stmtest_virtual.cpp –o virtual 
+CXX=icc -Qtm_enabled -openmp -DDEBUG
 
-hashtable: intel_stmtest_hashtable.c
-	icc –Qtm_enabled –openmp intel_stmtest_hashtable.c –o hashtable 
+all: intel_stmtest_virtual intel_stmtest_hashtable intel_stmtest_counting
+#virtual: intel_stmtest_virtual.cpp
+#	icc –Qtm_enabled intel_stmtest_virtual.cpp –o virtual
 
-counting: intel_stmtest_counting.c
-	icc –Qtm_enabled –Wall intel_stmtest_counting.c –o counting -lpthread
+#hashtable: intel_stmtest_hashtable.c
+#	icc –Qtm_enabled –openmp intel_stmtest_hashtable.c –o hashtable 
 
+#counting: intel_stmtest_counting.c
+#	icc –Qtm_enabled –Wall intel_stmtest_counting.c –o counting -lpthread
+
+CC=icc -Qtm_enabled -Wall
