add man2html site inside the git repository To work the man2html binaries must be compiled and installed, and the PATHs inside the cgi scripts changed to match the installation dir

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "httpd-2.2.x.no-transactions"]
 	path = httpd-2.2.x.no-transactions
 	url = http://git.haggai.is-a-geek.org/git/httpd-2.2.x.git
+[submodule "man"]
+	path = man
+	url = http://git.haggai.is-a-geek.org/git/man.git
