--- a/.gitmodules
+++ b/.gitmodules
@@ -16,6 +16,6 @@
 [submodule "man"]
 	path = man
 	url = http://git.haggai.is-a-geek.org/git/man.git
-[submodule "doc/presentation"]
-	path = doc/presentation
-	url = http://git.haggai.is-a-geek.org/git/STM-Presentation.git
+[submodule "doc"]
+	path = doc
+	url = /home/haggai/public_git/STM-Project-Docs.git
